# QualiVec

./: .dockerignore  Dockerfile  README.md  pyproject.toml
add_on/: clustering.py  last_step.py  root.py
app/: README.md  app.py  run_demo.py
src/qualivec/: __init__.py  classification.py  data.py  embedding.py  evaluation.py  matching.py  optimization.py  sampling.py
tests/: test_evaluation.py  test_qualivec_end_to_end.py
