[project]
name = "qualivec"
version = "0.1.0"
description = "A Python library for scalable qualitative content analysis using LLM embeddings and semantic vector-based classification."
readme = "README.md"
authors = [
    { name = "Akhil Vaidya", email = "akhilvaidya2004@gmail.com" }
]
requires-python = "==3.12.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "transformers>=4.28.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "google-genai>=0.2.0",
]

[project.scripts]
qualivec = "qualivec:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
